# cudaAnalyze

./: .gitignore  CMakeLists.txt  info.cu  info.cuh  main.cu  test.cu  test.cuh
coalesced/: CMakeLists.txt  coalesced.cu  coalesced.cuh
matrix/: CMakeLists.txt  matrix.cu  matrix.cuh
